--- a/css/resume.css
+++ b/css/resume.css
@@ -44,7 +44,7 @@ h2 {
 }
 
 .list-social-icons a:hover {
-  color: #20B2AA;
+  color: #BE81F7;
 }
 
 .list-social-icons a .fa-lg {
@@ -56,7 +56,7 @@ h2 {
 }
 
 .list-icons .list-inline-item i:hover {
-  color: #20B2AA;
+  color: #9A2EFE;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -139,11 +139,11 @@ section.resume-section .resume-item .resume-date {
 }
 
 a {
-  color: #20B2AA;
+  color: #DA81F5;
 }
 
 a:hover, a:focus, a:active {
-  color: #008B8B;
+  color: #8000FF;
 }
 
 .idiomas{
